style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

body {
  font-family: 'Open Sans', sans-serif;
}

#inputWrap {
  margin: 0 auto;
  height: auto;
  width: 50vw;
  display: flex;
  flex-direction: column;
  padding-bottom: 20px;
}
#inputWrap > p {
  width: 100%;
  font-size: 30px;
  text-align: center;
}
.inputWrap {
  width: 100%;
  display: flex;
  flex-direction: row;  
}

.inputWrap input {
  /* width: 40%;
  margin-right: 2.5%;
  height: 50px;
  border-radius: 5px;
  border: 1px #999 solid;
  padding-left: 20px; */
  font-size:18px;
  width: 40%;
  margin-right: 2.5%;
  padding:10px 10px 10px 5px;
  display:block;  
  border:none;
  border-bottom:1px solid #757575;
}
input:focus { 
  outline:none; 
}


.inputWrap > #submit {
  height: 50px;
  width: 15%;
  border-radius: 5px;
  background-color: #ffffff;
  border: 1px #03C9A9 solid;
  color: #03C9A9;
  font-size: 18px;
}
.inputWrap > #submit:focus {
  outline: 0;
}

.generatedPair {
  display: flex;
  flex-direction: row;
  margin: 0 auto;
  width: 50vw;
}
.generatedPair ul {
  width: 40%;
  list-style-type: none;
  padding: 0;
  margin-right: 2.5%;
}
.generatedPair li {
  text-align: center;
  height: 50px;
  line-height: 50px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.generatedPair li:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

#start {
  position: absolute;
  left: 25%;
  /* transform: translateX(-50%); */
  height: 50px;
  width: 100px;
  border-radius: 5px;
  background-color: #446CB3;
  border: none;
  color: #fff;
  font-size: 18px;
  opacity: 0.8;
}
#start:hover {
  opacity: 1;
  cursor: pointer;
}
#newGame {
  position: absolute;
  left: 25%;
  /* transform: translateX(-50%); */
  height: 50px;
  width: 140px;
  border-radius: 5px;
  background-color: #446CB3;
  border: none;
  color: #fff;
  font-size: 18px;
  opacity: 0.8;
}
#newGame:hover {
  opacity: 1;
  cursor: pointer;
}

